fixed problem in toc, fixed format for chapters, added text and bibliography

--- a/bibdatabase.bib
+++ b/bibdatabase.bib
@@ -342,3 +342,25 @@ doi = {10.1142/S0219525911003190},
 URL = {http://www.worldscientific.com/doi/abs/10.1142/S0219525911003190},
 eprint = {arXiv:1005.5718 [physics.soc-ph]}
 }
+
+@book{Mezard2009,
+  title={Information, Physics, and Computation},
+  author={M{\'e}zard, M. and Montanari, A.},
+  isbn={9780198570837},
+  lccn={2009277920},
+  series={Oxford Graduate Texts},
+  url={http://books.google.com.br/books?id=jhCM7i0a6UUC},
+  year={2009},
+  publisher={OUP Oxford}
+}
+
+@book{Opper2001,
+  title={Advanced Mean Field Methods: Theory and Practice},
+  author={Opper, M. and Saad, D.},
+  isbn={9780262150545},
+  lccn={00053322},
+  series={Neural Information Processing Series},
+  url={http://books.google.com.br/books?id=cuOX8sCDeNAC},
+  year={2001},
+  publisher={Mit Press}
+}
