--- a/confs/packs.tex
+++ b/confs/packs.tex
@@ -1,16 +1,10 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{ucs}
-\usepackage[brazil]{babel}
-
-\usepackage{amssymb}
-\usepackage{amsmath}
+\usepackage[brazilian]{babel}
 \usepackage{nameref}
 \usepackage{makeidx}
-\usepackage{lipsum}
 \usepackage{bm}
-
-
 \usepackage{color}
 
 % If this error started happening:
@@ -25,7 +19,7 @@
 \usepackage{subfig}
 
 \usepackage{amssymb,amsmath, amsfonts, amsthm} 
-\usepackage[final]{pdfpages}
+% \usepackage[final]{pdfpages}
 
 \usepackage{tikz}
 \usepackage{etoolbox}
